# sg_housing

./: .gitignore  LICENSE  ads.txt  housing.py  housing_pandas.py  housing_polars.py  location_map.py  main.py  new_public_dash.qmd  package-lock.json  private_housing.py  public_dash.py  public_housing.py  pyproject.toml  requirements.txt  test_folium.ipynb  test_hdb_daily_mongo_upload.ipynb  test_hdb_mongo_upload.ipynb  ura_02082024.parquet  zzbackup_public_housing.py
.jupyter_cache/: global.db
assets/: style.css
data/: attractions_geo_locations.csv  home_loc_tests.csv  mrt_locations.csv  p_attractions.csv  p_mrt.csv
pages/: about.md
posts/: 20-yrs-public-home.md  analyse-20-years-public-home-data.md  are-sg-public-homes-cheap.md  dssg-findings.md  first-blog-post.md  lowest-10-percentile.md  million-dollar-homes-sg.md  private-vs-public.md  sg-md-public-homes.md  sg-mil-homes-2024.md  sg-mil-public-homes-2024.md  sg-public-homes-still-cheap.md  sg-public-house-data.md  using-my-dash-outlier.md
static/: style.css  tw_styles.css
static/img/: scatter_15_2.html
static/img/outlier/: hdb_above_15.html  hdb_above_15_v2.html  hdb_base_scatter.html
static/img/private-public/: Apartment.html  Condo.html  Detached.html  EC.html  S. Detached.html  S. Semi-detached.html  (+5 more)
templates/: base.html  dash_page.html  dash_v2.html  header.html  house_dash.html  index.html  navbar.html  post.html  posts.html  private_home_dash.html  public_home_dash.html  tag.html  tags.html
templates/layout/: base.html
templates/partials/: _post_short.html
utils/: data_process.py
